--- a/configs/yelp/simplex/rrdvar.yaml
+++ b/configs/yelp/simplex/rrdvar.yaml
@@ -1,11 +1,12 @@
 epochs: 1000
-batch_size: 2048
-lr: 1.e-3
+batch_size: 256
+lr: 1.e-4
 wd: 1.e-5
-lmbda: 0.01
+num_ns: 2000
+neg_sampling_on_all: True
 
-rrd_K: 50
-rrd_L: 100
+rrd_K: 40
+rrd_L: 40
 rrd_T: 10
 rrd_mxK: 500
 rrd_unselected: 0
