--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ figs/
 *.json
 *.npz
 *.npy
+.idea/
 
 *_train
 *_val
@@ -25,3 +26,9 @@ figs/
 *.cache
 
 *.sh
+tuning.sh
+tuning2.sh
+test.py
+ply.py
+negx_tuning.sh
+nota.sh
