--- a/configs/yelp/bpr/rrd.yaml
+++ b/configs/yelp/bpr/rrd.yaml
@@ -1,10 +1,12 @@
 epochs: 1000
-batch_size: 2048
+batch_size: 4096
 lr: 1.e-3
-wd: 1.e-5
-lmbda: 0.01
-
+wd: 1.e-3
+lmbda: 0.005
 rrd_K: 100
-rrd_L: 100
+rrd_L: 200
 rrd_T: 100
 rrd_mxK: 500
+sample_from_score: False
+no_sort: False
+rrd_unselected: 0
