--- a/configs/yelp/bpr/rrdvknocon.yaml
+++ b/configs/yelp/bpr/rrdvknocon.yaml
@@ -3,17 +3,16 @@ batch_size: 4096
 lr: 1.e-3
 wd: 1.e-3
 lmbda: 0.005
-
 rrd_K: 100
 rrd_L: 200
 rrd_T: 100
 rrd_mxK: 500
+sample_from_score: False
+no_sort: False
 rrd_unselected: 0
 rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 8000
+rrd_extra: 4000
 mode: "None"
 alpha: 1
 neg_T: 1
-sample_type_for_extra: "random_regardless_uninteresting"
-T_for_extra: 1
