--- a/configs/yelp/lightgcn/rrd.yaml
+++ b/configs/yelp/lightgcn/rrd.yaml
@@ -3,8 +3,11 @@ batch_size: 2048
 lr: 1.e-3
 wd: 1.e-8
 lmbda: 0.5
-
-rrd_K: 40
-rrd_L: 40
+rrd_K: 200
+rrd_L: 100
 rrd_T: 10
 rrd_mxK: 500
+sample_from_score: False
+no_sort: False
+preload: True
+rrd_unselected: 0
