--- a/configs/yelp/lightgcn/rrdvk.yaml
+++ b/configs/yelp/lightgcn/rrdvk.yaml
@@ -1,19 +1,17 @@
 epochs: 1000
 batch_size: 2048
 lr: 1.e-3
-wd: 1.e-5
-lmbda: 0.01
+wd: 1.e-8
+lmbda: 0.5
 
-rrd_K: 50
+rrd_K: 200
 rrd_L: 100
 rrd_T: 10
 rrd_mxK: 500
 rrd_unselected: 0
 rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 5000
-mode: 'None'
+rrd_extra: 4000
+mode: "None"
 alpha: 1
 neg_T: 1
-sample_type_for_extra: "random_regardless_uninteresting"
-T_for_extra: 1
