add some test files

--- a/configs/gowalla/bpr/rrdvktest.yaml
+++ b/configs/gowalla/bpr/rrdvktest.yaml
@@ -1,20 +1,21 @@
 epochs: 1000
-batch_size: 2048
+batch_size: 4096
 lr: 1.e-3
-wd: 1.e-5
-lmbda: 0.001
+wd: 1.e-3
+lmbda: 0.005
 
 rrd_K: 100
 rrd_L: 200
-rrd_T: 10
+rrd_T: 100
 rrd_mxK: 500
 rrd_unselected: 0
-rrd_neg: 2
+rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 5000
-alpha: 10
+rrd_extra: 2000
 mode: "val_diff"
+alpha: 100
 neg_T: 100
 sample_type_for_extra: "T_val_with_uninteresting"
 T_for_extra: 1
 mx_T: 50
+test_type: 0
