--- a/configs/citeulike/bpr/rrdvktest.yaml
+++ b/configs/citeulike/bpr/rrdvktest.yaml
@@ -9,7 +9,7 @@ rrd_L: 200
 rrd_T: 10
 rrd_mxK: 500
 rrd_unselected: 0
-rrd_neg: 2
+rrd_neg: 1.5
 calu_len: 5
 rrd_extra: 5000
 alpha: 10
@@ -18,3 +18,4 @@ neg_T: 100
 sample_type_for_extra: "T_val_with_uninteresting"
 T_for_extra: 1
 mx_T: 50
+test_type: 0
