--- a/configs/citeulike/lightgcn/rrdvkad.yaml
+++ b/configs/citeulike/lightgcn/rrdvkad.yaml
@@ -12,9 +12,8 @@ rrd_unselected: 0
 rrd_neg: 1.5
 calu_len: 5
 rrd_extra: 4000
-mode: 'val_diff'
 alpha: 0.1
 neg_T: 100
-sample_type_for_extra: "T_val_with_uninteresting"
 T_for_extra: 1
-mx_T: 50
+mx_T: 1
+test_type: 0
