--- a/configs/citeulike/lightgcn/rrdvktest.yaml
+++ b/configs/citeulike/lightgcn/rrdvktest.yaml
@@ -2,19 +2,20 @@ epochs: 1000
 batch_size: 2048
 lr: 1.e-3
 wd: 1.e-5
-lmbda: 0.001
+lmbda: 0.01
 
-rrd_K: 100
-rrd_L: 200
+rrd_K: 50
+rrd_L: 100
 rrd_T: 10
 rrd_mxK: 500
 rrd_unselected: 0
-rrd_neg: 2
+rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 5000
-alpha: 10
-mode: "val_diff"
+rrd_extra: 4000
+mode: 'val_diff'
+alpha: 0.1
 neg_T: 100
 sample_type_for_extra: "T_val_with_uninteresting"
 T_for_extra: 1
-mx_T: 50
+mx_T: 1
+test_type: 0
