--- a/configs/gowalla/bpr/rrdvk.yaml
+++ b/configs/gowalla/bpr/rrdvk.yaml
@@ -11,10 +11,10 @@ rrd_mxK: 500
 rrd_unselected: 0
 rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 8000
-mode: "None"
-alpha: 1
-neg_T: 1
-sample_type_for_extra: "random_regardless_uninteresting"
+rrd_extra: 2000
+mode: "val_diff"
+alpha: 100
+neg_T: 100
+sample_type_for_extra: "T_val_with_uninteresting"
 T_for_extra: 1
 mx_T: 50
