--- a/configs/gowalla/simplex/rrdvk.yaml
+++ b/configs/gowalla/simplex/rrdvk.yaml
@@ -1,22 +1,21 @@
 epochs: 1000
-batch_size: 256
+batch_size: 2048
 lr: 1.e-4
-wd: 1.e-5
+wd: 1.e-6
 num_ns: 2000
 neg_sampling_on_all: True
 
-rrd_K: 40
-rrd_L: 40
+rrd_K: 100
+rrd_L: 200
 rrd_T: 10
 rrd_mxK: 500
 rrd_unselected: 0
 rrd_neg: 1.5
 calu_len: 5
-rrd_extra: 5000
-mode: "val_diff"
-alpha: 1
+mode: "val_diff_2"
+alpha: 0.1
 neg_T: 1
-rrd_extra: 8000
-mx_T: 50
+rrd_extra: 1000
+mx_T: 100
 T_for_extra: 1
-sample_type_for_extra: "random_regardless_uninteresting"
+sample_type_for_extra: "T_val_with_uninteresting"
